# Yomi

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSES.md  Makefile  README.md  SECURITY.md  YOMI_AGENT_DEVELOPMENT_PROCESS.md  docker-compose.yml
backend/: DEPENDENCIES.md  Dockerfile  pyproject.toml
backend/tests/: test_admin.py  test_audit_log.py  test_auth_dependencies.py  test_auth_rate_limit.py  test_bootstrap_admin.py  test_config.py  test_conjugation.py  test_crypto_kdf.py  test_csrf.py  test_db.py  test_grammar.py  test_health.py  test_migrations.py  test_password_change.py  test_passwords.py  test_progress.py  test_registration.py  test_secret_storage.py  test_sessions.py  test_srs.py  test_vocab.py
backend/yomi/: __init__.py  bootstrap_admin.py  config.py  deps.py  main.py
backend/yomi/admin/: router.py  schemas.py
backend/yomi/audit/: __init__.py  repository.py
backend/yomi/auth/: __init__.py  csrf.py  dependencies.py  rate_limit.py  router.py  schemas.py  sessions.py
backend/yomi/db/: __init__.py  sqlite.py
backend/yomi/grammar/: repository.py  router.py  schemas.py
backend/yomi/invites/: __init__.py  repository.py
backend/yomi/progress/: repository.py  router.py  schemas.py
backend/yomi/secrets/: __init__.py  repository.py
backend/yomi/security/: __init__.py  crypto.py  passwords.py  session_key_cache.py
backend/yomi/services/: conjugation_engine.py
backend/yomi/settings/: __init__.py  router.py  schemas.py
frontend/: DEPENDENCIES.md  (+5 more)
ingestion/: Dockerfile  ingest.py  pyproject.toml
ingestion/tests/: test_ingest.py
(+46 files in other folders)
