[project]
name = "yomi-backend"
version = "0.1.0"
description = "Yomi FastAPI backend"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
